Position modal box fixed per bootstrap defaults, so it doesn't get cut off when scrolled down

--- a/app/assets/stylesheets/avalon.css.scss
+++ b/app/assets/stylesheets/avalon.css.scss
@@ -559,3 +559,8 @@ button.close {
   }
   .field_with_errors input { border-color: $errorText; }
 }
+
+.modal {
+  position: fixed;
+  top: 10%;
+}
